Added default Redis URL to configuration

--- a/Plutus.Server/appsettings.json
+++ b/Plutus.Server/appsettings.json
@@ -7,7 +7,7 @@
     }
   ],
   "AppConfig": {
-    "RedisUrl": "REDIS_URL",
+    "RedisUrl": "localhost:6379",
     "BuyInterval": "0",
     "SellInterval": "0",
     "Test": "true"
