--- a/Plutus.Tests/Plutus.Tests.csproj
+++ b/Plutus.Tests/Plutus.Tests.csproj
@@ -2,6 +2,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <IsPackable>false</IsPackable>
+    <AssemblyName>Plutus.Tests.Integration</AssemblyName>
+    <RootNamespace>Plutus.Tests.Integration</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
