--- a/Plutus.Tests.Unit/Plutus.Tests.Unit.csproj
+++ b/Plutus.Tests.Unit/Plutus.Tests.Unit.csproj
@@ -13,4 +13,12 @@
   <ItemGroup>
     <ProjectReference Include="..\Plutus.Core\Plutus.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="orders.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
